<resources>
    <string name="app_name">FindEating</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="find_password">Find the Password</string>
    <string name="login_in">Login  in</string>
    <string name="back_to_login">Back  To  Login</string>
    <string name="back">back</string>
</resources>
