<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- 用户名标签-->
    <TextView
        android:id="@+id/username_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/nine"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        android:text="@string/username"/>
    <!-- 用户名输入框-->
    <EditText
        android:id="@+id/usernameETLogin"
        android:paddingLeft="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/username_tag"
        android:layout_marginLeft="30dp"
        android:background="@null"
        android:textSize="16sp"
        android:maxLines="1"
        android:inputType="text"
        android:layout_toRightOf="@id/username_tag"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:layout_alignLeft="@id/usernameETLogin"
        android:layout_below="@id/usernameETLogin"
        android:layout_marginTop="10dp"
        android:background="@color/line"/>
    <!-- 密码标签-->
    <TextView
        android:id="@+id/password_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_tag"
        android:textColor="@color/nine"
        android:textSize="14sp"
        android:layout_marginTop="30dp"
        android:text="@string/password"/>
    <!-- 密码输入框-->
    <EditText
        android:id="@+id/passwordETLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:paddingLeft="2dp"
        android:textSize="16sp"
        android:maxLines="1"
        android:inputType="textPassword"
        android:layout_alignLeft="@id/usernameETLogin"
        android:layout_alignBottom="@id/password_tag"/>
    <View
        android:id="@+id/password_line"
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:layout_alignLeft="@id/passwordETLogin"
        android:layout_below="@id/passwordETLogin"
        android:layout_marginTop="10dp"
        android:background="@color/line"/>
    <TextView
        android:id="@+id/findpasswordTVLogin"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:textColor="@color/nine"
        android:textSize="14sp"
        android:gravity="center"
        android:layout_marginTop="4dp"
        android:layout_below="@id/password_line"
        android:text="@string/find_password"/>
    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center"
        android:textSize="14sp"
        android:layout_below="@+id/findpasswordTVLogin"
        android:layout_marginTop="4dp"
        android:padding="8dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@color/light_blue"
        android:text="@string/login_in"/>
    <LinearLayout
        android:layout_below="@id/loginBtn"
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">
        <TextView
            android:id="@+id/createTV"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/create_account"
            android:textColor="@color/black"
            android:gravity="center"/>
    </LinearLayout>
</RelativeLayout>