<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- 用户名标签-->
    <TextView
        android:id="@+id/username_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/nine"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        android:text="@string/username"/>
    <!-- 用户名输入框-->
    <EditText
        android:id="@+id/usernameETRegister"
        android:paddingLeft="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/username_tag"
        android:layout_marginLeft="30dp"
        android:background="@null"
        android:textSize="16sp"
        android:maxLines="1"
        android:inputType="text"
        android:layout_toRightOf="@id/username_tag"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:layout_alignLeft="@id/usernameETRegister"
        android:layout_below="@id/usernameETRegister"
        android:layout_marginTop="10dp"
        android:background="@color/line"/>
    <!-- 密码标签-->
    <TextView
        android:id="@+id/password_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_tag"
        android:textColor="@color/nine"
        android:textSize="14sp"
        android:layout_marginTop="30dp"
        android:text="@string/password"/>
    <!-- 密码输入框-->
    <EditText
        android:id="@+id/passwordET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:paddingLeft="2dp"
        android:textSize="16sp"
        android:maxLines="1"
        android:inputType="textPassword"
        android:layout_alignLeft="@id/usernameETRegister"
        android:layout_alignBottom="@id/password_tag"/>
    <View
        android:id="@+id/password_line"
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:layout_alignLeft="@id/passwordET"
        android:layout_below="@id/passwordET"
        android:layout_marginTop="10dp"
        android:background="@color/line"/>

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center"
        android:textSize="14sp"
        android:layout_marginTop="20dp"
        android:padding="8dp"
        android:layout_below="@id/password_line"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@color/light_blue"
        android:text="@string/create_account"/>

    <TextView
        android:id="@+id/backTV"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/registerBtn"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="4dp"
        android:text="@string/back_to_login"
        android:textColor="@color/black"
        android:gravity="center"/>
</RelativeLayout>